--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -6,7 +6,7 @@ server{
   root /tilelive/tiles/;
 
   location ~* ^/tiles/(?<tile_path>.*)$ {
-    try_files $tile_path @node;
+    try_files /$tile_path @node;
   }
 
   location @node {
