--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -5,6 +5,9 @@ server{
 
   root /tilelive/tiles/;
 
+  access_log /dev/null;
+  error_log /dev/null;
+
   location ~* ^/tiles/(?<tile_path>.*)$ {
     try_files /$tile_path @node;
   }
