header from tilelive is now used. nginx stuff

--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -8,6 +8,11 @@ server{
   access_log /dev/null;
   error_log /dev/null;
 
+  sendfile on;
+
+  tcp_nodelay on;
+  tcp_nopush on;
+
   location ~* ^/tiles/(?<tile_path>.*)$ {
     try_files /$tile_path @node;
   }
