--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "coffee-script": "^1.8.0",
     "express": "~4.4.1",
-    "tilejson": "~0.6.5",
     "mkdirp": "~0.5.0",
-    "tilelive": "~4.5.3",
-    "tilelive-vector": "~1.0.2",
-    "coffee-script": "^1.7.1"
+    "tilejson": "~0.10.0",
+    "tilelive": "~5.2.2",
+    "tilelive-tmsource": "^0.1.2",
+    "tilelive-vector": "~2.1.0"
   },
   "devDependencies": {},
   "scripts": {
