style name is now the url

--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -13,7 +13,7 @@ server{
   tcp_nodelay on;
   tcp_nopush on;
 
-  location ~* ^/tiles/(?<tile_path>.*)$ {
+  location ~* ^/*/(?<tile_path>.*)$ {
     try_files /$tile_path @node;
   }
 
