--- a/fig.yml
+++ b/fig.yml
@@ -2,6 +2,6 @@ app:
   build: .
   environment:
     MAPBOX_ACCESS_TOKEN: <obtain_at_ https://www.mapbox.com/help/create-api-access-token/ >
-    TM2Z_FILE: osm-bright.tm2z
+    STYLE_NAME: osm-bright
   ports:
     - "9999:80"
