--- a/fig.yml
+++ b/fig.yml
@@ -1,7 +1,17 @@
-app:
+renderer:
   build: .
   environment:
     MAPBOX_ACCESS_TOKEN: <obtain_at_ https://www.mapbox.com/help/create-api-access-token/ >
     STYLE_NAME: osm-bright
+  volumes:
+    - ./tile-cache:/tilelive/tiles
+nginx:
+  image: nginx:1.7.8
+  links:
+    - renderer
+  volumes_from:
+    - renderer
+  volumes:
+    - ./nginx-default.conf:/etc/nginx/conf.d/default
   ports:
-    - "9999:80"
+    - "8080:80"
