just use nginx latest in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 renderer:
   build: .
   environment:
-    MAPBOX_ACCESS_TOKEN: pk.eyJ1IjoidWJlcmdlc3VuZGhlaXQiLCJhIjoiaHhTeV9WcyJ9.jditXHYWvnJegWSfrFGV3w
+    MAPBOX_ACCESS_TOKEN: <obtain api token at mapbox.com>
     STYLE_NAME: osm-bright
   volumes:
     - ./tile-cache:/tilelive/tiles
 nginx:
-  image: nginx:1.7.10
+  image: nginx:latest
   links:
     - renderer
   volumes_from:
